force-app/main/default/objects/P2P_Orders__c/P2P_Orders__c.object-meta.xml
<CustomObject>
    <description>Pathway2Provide Orders detail purchasing information form each buyer each month.</description>
    <label>P2P Order</label>
    <nameField>
        <displayFormat>P2P-{0000}</displayFormat>
        <label>P2P Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>P2P Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>