force-app/main/default/objects/P2P_Orders__c/fields/Newborn__c.field-meta.xml
<CustomField>
    <fullName>Newborn__c</fullName>
    <label>Newborn</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>