force-app/main/default/objects/P2P_Orders__c/fields/Pads_FQ__c.field-meta.xml
<CustomField>
    <fullName>Pads_FQ__c</fullName>
    <label>Pads FQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>