force-app/main/default/objects/P2P_Orders__c/fields/Sell_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Sell_To_ID__c</fullName>
    <formula>Account__r.P2P_Sell_To_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell-To ID</label>
    <type>Text</type>
</CustomField>