force-app/main/default/objects/P2P_Orders__c/fields/Ship_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_ID__c</fullName>
    <formula>Account__r.P2P_Ship_To_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship-To ID</label>
    <type>Text</type>
</CustomField>