force-app/main/default/objects/P2P_Orders__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <label>Shipping City</label>
    <length>18</length>
    <type>Text</type>
</CustomField>