force-app/main/default/objects/P2P_Orders__c/fields/Size_2__c.field-meta.xml
<CustomField>
    <fullName>Size_2__c</fullName>
    <label>Size 2</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>