force-app/main/default/objects/P2P_Orders__c/fields/Size_2_FQ__c.field-meta.xml
<CustomField>
    <fullName>Size_2_FQ__c</fullName>
    <label>Size 2 FQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>