force-app/main/default/objects/P2P_Orders__c/fields/Size_3_FQ__c.field-meta.xml
<CustomField>
    <fullName>Size_3_FQ__c</fullName>
    <label>Size 3 FQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>