force-app/main/default/objects/P2P_Orders__c/fields/Total_FQ_Diapers__c.field-meta.xml
<CustomField>
    <fullName>Total_FQ_Diapers__c</fullName>
    <formula>Newborn_FQ__c  +  Size_1_FQ__c  +  Size_2_FQ__c  +  Size_3_FQ__c  +  Size_4_FQ__c  + Size_5_FQ__c  + Size_6_FQ__c  + Size_7_FQ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total FQ Diapers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>