force-app/main/default/objects/P2P_Orders__c/fields/Total_Huggies__c.field-meta.xml
<CustomField>
    <fullName>Total_Huggies__c</fullName>
    <formula>Newborn__c + Size_1__c + Size_2__c + Size_3__c + Size_4__c + Size_5__c + Size_6__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Huggies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>